--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </nav>
     </header>
     <section class="hero">
-        <h2>Cool subtitle here!</h2>
+        <img src="../assets/Images/image-4.jpeg" alt="hero image">
+        <h2>Professional Portfolio</h2>
 
     </section>
     <main>  
