updated readme file & subtexts

--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
                 <div class="image-row">
                     <div class="image-container">
                         <div class="overlay"></div>
-                        <img src="./assets/Images/image-5.jpeg" alt="ex2"/>
-                        <div class="bottom-left">LED Wall<div class="subtext">MERN Stack</div></div>
+                        <img src="./assets/Images/image-5.jpeg" alt="New York City"/>
+                        <div class="bottom-left">New York<div class="subtext">Lights</div></div>
                     </div>
                     <div class="image-container">
                         <div class="overlay"></div>
-                    <img src="./assets/Images/image-3.jpeg" alt="ex3">
-                    <div class="bottom-left">Calculator<div class="subtext">MERN Stack</div></div>
+                    <img src="./assets/Images/image-3.jpeg" alt="New York City Sunset">
+                    <div class="bottom-left">New City<div class="subtext">Sunset</div></div>
                     </div>
                 </div>
                 <div class="image-row">
                     <div class="image-container">
                         <div class="overlay"></div>
-                    <img src="./assets/Images/image-2.jpeg" alt="ex2">
-                    <div class="bottom-left">Pastel Puzzels<div class="subtext">MERN Stack</div></div>
+                    <img src="./assets/Images/image-2.jpeg" alt="Paris">
+                    <div class="bottom-left">Paris City<div class="subtext">Eiffle</div></div>
                     </div>
                     <div class="image-container">
                         <div class="overlay"></div>
-                    <img src="./assets/Images/image-6.jpeg" alt="ex5">
-                    <div class="bottom-left">Run Buddy<div class="subtext">MERN Stack</div></div>
+                    <img src="./assets/Images/image-6.jpeg" alt="Europe">
+                    <div class="bottom-left">Paris City<div class="subtext">Water</div></div>
                         </div> 
                 </div>
                 
