fixing hero image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <section class="hero">
-        <img src="./assets/Images/image-4.jpeg" alt="hero image">
+        <img src="./assets/Images/image-4.jpeg" alt="hero image"/>
         <h2>Professional Portfolio</h2>
 
     </section>
